@@ -128,7 +128,6 @@ module ActiveMerchant #:nodoc:
         else
           post[:pan]        = source.number
           post[:expdate]    = expdate(source)
-          post[:cvd_value]  = source.verification_value if source.verification_value?
         end
       end
 
@@ -156,7 +155,6 @@ module ActiveMerchant #:nodoc:
 
         Response.new(successful?(response), message_from(response[:message]), response,
           :test          => test?,
-          :cvv_result    => response[:cvd_result_code].try(:last),
           :authorization => authorization_from(response)
         )
       end
@@ -194,35 +192,14 @@ module ActiveMerchant #:nodoc:
         root  = xml.add_element("request")
         root.add_element("store_id").text  = options[:login]
         root.add_element("api_token").text = options[:password]
-        root.add_element(transaction_element(action, parameters))
-
-        xml.to_s
-      end
-
-      def transaction_element(action, parameters)
-        transaction = REXML::Element.new(action)
+        transaction = root.add_element(action)
 
         # Must add the elements in the correct order
         actions[action].each do |key|
-          if key == :cvd_info
-            transaction.add_element(cvd_element(parameters[:cvd_value]))
-          else
-            transaction.add_element(key.to_s).text = parameters[key] unless parameters[key].blank?
-          end
+          transaction.add_element(key.to_s).text = parameters[key] unless parameters[key].blank?
         end
 
-        transaction
-      end
-
-      def cvd_element(cvd_value)
-        element = REXML::Element.new('cvd_info')
-        if cvd_value
-          element.add_element('cvd_indicator').text = "1"
-          element.add_element('cvd_value').text = cvd_value
-        else
-          element.add_element('cvd_indicator').text = "0"
-        end
-        element
+        xml.to_s
       end
 
       def message_from(message)
@@ -242,8 +219,8 @@ module ActiveMerchant #:nodoc:
 
       def actions
         {
-          "purchase"           => [:order_id, :cust_id, :amount, :pan, :expdate, :crypt_type, :cvd_info],
-          "preauth"            => [:order_id, :cust_id, :amount, :pan, :expdate, :crypt_type, :cvd_info],
+          "purchase"           => [:order_id, :cust_id, :amount, :pan, :expdate, :crypt_type],
+          "preauth"            => [:order_id, :cust_id, :amount, :pan, :expdate, :crypt_type],
           "command"            => [:order_id],
           "refund"             => [:order_id, :amount, :txn_number, :crypt_type],
           "indrefund"          => [:order_id, :cust_id, :amount, :pan, :expdate, :crypt_type],
